# kanban

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.ps1  kanban.md
.github/: FUNDING.yml
.github/workflows/: release.yml
.kanban/: kanban.md  kb-config.yaml  kb-data.yaml  kb-export.json  kb-export.md
dashboard/: AGENTS.md  README.md  index.html  package-lock.json  package.json  style.css
dashboard-v2/: AGENTS.md  index.html  style.css
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx
docs/: index.html  style.css
docs/docs/: index.html
docs/documentation/: index.html
docs/skills/: index.html
skills/: SKILL.md
src/: embed.rs  main.rs  models.rs  server.rs  store.rs  tags.rs
src/commands/: add.rs  assign.rs  comment.rs  config.rs  dashboard.rs  data.rs  del.rs  edit.rs  export.rs  init.rs  install.rs  list.rs  mod.rs  move_task.rs  new_user.rs  status.rs  tags.rs  trash.rs  user.rs
wix/: main.wxs
