[package]
name = "kb"
version = "1.2.5"
edition = "2024"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
rust-embed = "8"
futures-core = "0.3"
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }
